# SPM2025

./: .gitignore  CMakeLists.txt  README.md
examples/Benchmarks/Construction/: CMakeLists.txt
examples/Benchmarks/Construction/include/: BenchDataTypes.h  SDARefine.h
examples/Benchmarks/Construction/src/: main.cpp
examples/CahnHillard/: CMakeLists.txt
examples/CahnHillard/config/: config.txt
examples/CahnHillard/include/: CHEquation.h  CHInitialCondition.h  CHInputData.h  CHNodeData.h  CHPostProcessing.h  CHRefine.h  CHUtils.h  MEquation.h  MassComputation.h  MergeChildrenMass.h
examples/CahnHillard/src/: CH.cpp
examples/DendriteBasics/IntergridMany/: CMakeLists.txt
examples/DendriteBasics/IntergridMany/include/: DARefine.h
examples/DendriteBasics/IntergridMany/src/: main.cpp
examples/DendriteBasics/Periodic/: CMakeLists.txt
examples/DendriteBasics/Periodic/include/: ADEquation.h  ADNodeData.h  PRefine.h
examples/DendriteBasics/Periodic/src/: main.cpp
examples/DendroTests/Checkpoint/: CMakeLists.txt
examples/DendroTests/Checkpoint/src/: IntergridBug.cpp  main.cpp  subDABug.cpp
examples/DendroTests/MassCoservation/: CMakeLists.txt
examples/DendroTests/MassCoservation/include/: MEquation.h  MNodeData.h  MassCalculatorTotal.h  MassComputation.h  Refinement.h  utils.h
examples/DendroTests/MassCoservation/src/: main.cpp
examples/DendroTests/SubDA/: CMakeLists.txt
examples/DendroTests/SubDA/src/: boundary.cpp
examples/DendroTests/periodic/: CMakeLists.txt
examples/DendroTests/periodic/src/: main.cpp
examples/IMGA/SBM/: CMakeLists.txt
examples/IMGA/SBM/include/: BFS.h  CheckSurface.h  ElementMarker.h  IMGALoop.h  SSHTEquation.h  SSHTNodeData.h  utils.h
examples/SSHT_STL/: CMakeLists.txt
examples/SSHT_STL/include/: SDARefine.h  SSHTInputData.h  UniMeshInputData.h
examples/SSHT_STL/run/: config.txt
examples/SSHT_STL/src/: SSHT.cpp
examples/TSHT_Modified/: CMakeLists.txt
examples/TSHT_Modified/include/: HTEquation.h  HTInputData.h  SDACoaren.h  SDARefine.h
examples/TSHT_Modified/run/: config.txt
examples/TSHT_Modified/src/: TSHT.cpp
examples/Tutorials/UniMesh/: CMakeLists.txt
examples/Tutorials/bdRefine/: CMakeLists.txt
include/: DataTypes.h  (+8 more)
projects/DeepTrace/: CMakeLists.txt
projects/DeepTrace/include/: DeepTraceInputData.h
projects/DeepTrace/src/: deeptrace.cpp
projects/Elasticity-SBM/: CMakeLists.txt
projects/Elasticity-SBM/include/: CalcStress.h  DeepTrace.h  LEBCSetup.h  LEInputData.h  LEInputDataStructs.h  LERefine.h  SBMCalc.h  SBMCalcDeepTrace.h  SSLEEquation.h  TSLEEquation.h  util.h
projects/Elasticity-SBM/src/: SSLE.cpp
projects/NS-VMS/: CMakeLists.txt
projects/NS-VMS/config/: config.txt
projects/NS-VMS/include/: NSBoundaryConditions.h  NSEquation.h  NSInputData.h  NSUtils.h
projects/NS-VMS/src/: main.cpp
projects/Navier-Stokes-AERO/: CMakeLists.txt
projects/Navier-Stokes-AERO/config/: config.txt
projects/Navier-Stokes-AERO/include/: NSBoundaryConditions.h  NSInputData.h  NSPost.h  NSUtils.h  Post.h  SDARefine.h
projects/Navier-Stokes-AERO/src/: main.cpp
projects/Navier-Stokes-PSPG/: CMakeLists.txt
projects/Navier-Stokes-PSPG/config/: config.txt
projects/Navier-Stokes-PSPG/include/: NSBoundaryConditions.h  NSInputData.h  NSUtils.h
projects/Navier-Stokes-PSPG/src/: main.cpp
projects/Neighbors/: CMakeLists.txt
projects/Neighbors/include/: NeighborSearch.h
projects/Neighbors/sample_inputs/: config.txt
projects/Neighbors/src/: bdRefine.cpp
projects/Point-Extraction/: CMakeLists.txt
projects/Point-Extraction/include/: NodePrint.h  ptextractInputData.h
projects/Point-Extraction/run/: CSV_Combiner.py  config.txt  model_scaled.stl
projects/Point-Extraction/src/: ptextract.cpp
projects/lin_ns_lid_driven/: CMakeLists.txt
projects/lin_ns_lid_driven/config/: config.txt
projects/lin_ns_lid_driven/include/: NSEquation.h  NSInputData.h  NSNodeData.h  NSUtils.h
projects/lin_ns_lid_driven/src/: main.cpp
projects/lin_ns_lid_driven_imga/: CMakeLists.txt
projects/lin_ns_lid_driven_imga/config/: config.txt
projects/lin_ns_lid_driven_imga/include/: BFS.h  NSBoundaryConditions.h  NSEquation.h  NSInputData.h  NSNodeData.h  NSUtils.h  SBMCalc.h  SBMMarker.h
projects/lin_ns_lid_driven_imga/src/: main.cpp
projects/linearns_pspg_pnp_kt/: CMakeLists.txt
projects/linearns_pspg_pnp_kt/Electroosmotic/: config.txt  generate_pvd.py  paraview_ns.pvd  paraview_pnp.pvd
projects/linearns_pspg_pnp_kt/config/: config.txt  plot.py
projects/linearns_pspg_pnp_kt/include/: MomentumEquation.h  NSBoundaryConditions.h  NSEquation.h  NSPNPExpr.hpp  NSPNPInputData.h  NSPNPNodeData.hpp  NSParams.h  NSRefine.h  NSUtils.h  PNPEquation.h  PNPEquation1.hpp  PressurePoissonEquation.h  VelocityUpdateEquation.h
projects/linearns_pspg_pnp_kt/src/: main.cpp
projects/ns_lid_driven/: CMakeLists.txt
projects/ns_lid_driven/config/: config.txt
projects/ns_lid_driven/include/: NSEquation.h  NSInputData.h  NSPost.h  NSUtils.h  SDARefine.h
projects/ns_lid_driven/src/: main.cpp
projects/ns_lid_driven_imga/: CMakeLists.txt
projects/ns_lid_driven_imga/config/: config.txt
projects/ns_lid_driven_imga/include/: BFS.h  BoundaryCalc_ExtraInter.h  CheckSurface.h  DeepTrace.h  Extrapolation.h  GetPoint2InterpolateIBM.h  IMGALoop.h  NSBoundaryConditions.h  NSEquation.h  NSInputData.h  NSNodeData.h  NSPost.h  NSRefine.h  NSUtils.h  OptimalSurrogateGpLoop.h  SBMCalcDeepTrace.h  SDARefine.h
projects/ns_lid_driven_imga/src/: main.cpp
projects/ns_lid_driven_imga_deeptrace/: CMakeLists.txt
projects/ns_lid_driven_imga_deeptrace/include/: BoundaryCalc_ExtraInter.h  DeepTrace.h  GetPoint2Interpolate.h  NSBoundaryConditions.h  NSDataStructure.h  NSEquation.h  NSInputData.h  NSRefine.h  NSUtils.h  OptimalSurrogateGpLoop.h  SBMCalc.h  SBMCalcDeepTrace.h  SBMMarker.h  SDARefine.h  nanoflann.hpp
projects/ns_lid_driven_imga_deeptrace/src/: main.cpp
test/: CMakeLists.txt  RefinementUtils.h  heat.cpp  pyramidElement.cpp
test/HeatEquation/: SSHTEquation.h  Utils.h
test/Refinement/: BoundaryRefine.h
(+118 files in other folders)
